Fri Jul 27 10:56:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ciao.doxygen:
        * etc/ciao_dds4ccm.doxygen:
        * tests/IDL_Test/Cornucopia/Cornucopia.doxygen:
          Generate UML diagrams, assume stl is buildin

Fri Jul 27 08:59:40 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.doxygen:
          Upgraded to latest doxygen

Thu Jul 26 16:29:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.cpp:
          One return path

        * etc/ciao.doxygen:
        * etc/ciao_dds4ccm.doxygen:
          Upgraded to latest doxygen

Thu Jul 26 14:56:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/WaitSet.h:
          Doxygen fix

Thu Jul 26 09:31:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

        * etc/ciao.doxygen:
        * etc/ciao_dds4ccm.doxygen:
        * tests/IDL_Test/Cornucopia/Cornucopia.doxygen:
          Removed deprecated tag

Thu Jul 26 09:12:26 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.3 released.

Mon Jul 23 19:43:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/Sender/Keyed_Test_Sender.mpc:
          Fixed base project

Mon Jul 23 19:24:09 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.cpp:
          Init the condition manager from subscriber base instead from the
          getter

Mon Jul 23 18:47:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.h:
          Doxygen improvements

        * connectors/dds4ccm/impl/ConditionManager.cpp (query):
          Check if qc_reader is nil before using it
