@@ -1,3 +1,8 @@
+Fri Jul 27 18:05:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
+          Improved instructions
+
 Fri Jul 27 10:56:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * etc/ciao.doxygen:
